[tool.poetry]
name = "mltopics"
version = "0.1.0"
description = "Everything in this project is an experiment"
authors = ["Hironori Sakai <crescent.lab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
adhoc = {url = "https://github.com/stdiff/adhoc/archive/v0.4.zip"}
click = "7.1.2"
tqdm = "^4.59.0"
torch = {version = "^1.8.1", python = "^3.9", platform = "linux"}
torchvision = {version = "^0.9.1", python = "^3.9", platform = "linux"}
torchaudio = {version = "^0.8.1", python = "^3.9", platform = "linux"}
pytorch-lightning = "^1.2.7"
ipywidgets = "^7.6.3"
pandas = "1.1.5"
scikit-learn = "0.24.2"
sagemaker = "^2.44.0"
boto3 = "^1.17.86"
boto3-stubs = "^1.17.86"
ray = "^1.4.1"

[tool.poetry.dev-dependencies]
jupyterlab = "3.0.11"
jedi = "0.18"
jupytext = "^1.10.2"
jupyterlab-spellchecker = "0.5.1"
jupyterlab-templates = "0.3.0"
jupyterlab-code-formatter = "1.4.4"
black = "20.8b1"
isort = "5.7.0"
jupyterlab-git = "0.23.3"
watermark = "2.2.0"
altair = "4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
